src/test/ui/try-block/try-block-bad-lifetime.stderr
error[E0597]: `my_string` does not live long enough
  --> $DIR/try-block-bad-lifetime.rs:15:33
   |
LL |         let result: Result<(), &str> = try {
   |             ------ borrow later stored here
LL |             let my_string = String::from("");
LL |             let my_str: & str = & my_string;
   |                                 ^^^^^^^^^^^ borrowed value does not live long enough
...
LL |         };
   |         - `my_string` dropped here while still borrowed

error[E0506]: cannot assign to `i` because it is borrowed
  --> $DIR/try-block-bad-lifetime.rs:29:13
   |
LL |         let k = &mut i;
   |                 ------ borrow of `i` occurs here
...
LL |             i = 10;
   |             ^^^^^^ assignment to borrowed `i` occurs here
LL |         };
LL |         ::std::mem::drop(k);
   |                          - borrow later used here

error[E0499]: cannot borrow `*k` as mutable more than once at a time
  --> $DIR/try-block-bad-lifetime.rs:31:26
   |
LL |             Err(k) ?;
   |                 - first mutable borrow occurs here
...
LL |         ::std::mem::drop(k);
   |                          ^ second mutable borrow occurs here
...
LL |         let i_ptr = if let Err(i_ptr) = j { i_ptr } else { panic ! ("") };
   |                                         - first borrow later used here

error[E0506]: cannot assign to `i` because it is borrowed
  --> $DIR/try-block-bad-lifetime.rs:32:9
   |
LL |         let k = &mut i;
   |                 ------ borrow of `i` occurs here
...
LL |         i = 40;
   |         ^^^^^^ assignment to borrowed `i` occurs here
LL | 
LL |         let i_ptr = if let Err(i_ptr) = j { i_ptr } else { panic ! ("") };
   |                                         - borrow later used here

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0499, E0506, E0597.
For more information about an error, try `rustc --explain E0499`.
